projects/k8s-k3s-demo/middleware-nginx.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-nginx
spec:
  stripPrefix:
    prefixes:
      - /nginx
