projects/k8s-k3s-demo/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-app
        image: docker.io/library/flask-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
          requests:
            cpu: "0.25"
            memory: "64Mi"
