projects/k8s-k3s-demo/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
    protocol: TCP
