projects/k8s-k3s-demo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-app-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/nginx`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
      middlewares:
        - name: strip-nginx
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: flask-service
          port: 5000
